[package]
name = "tokio-openssl"
version = "0.6.3"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
repository = "https://github.com/tokio-rs/tokio-openssl"
description = """
An implementation of SSL streams for Tokio backed by OpenSSL
"""

[dependencies]
futures-util = { version = "0.3", default-features = false }
openssl = { git = "https://github.com/zhxie/rust-openssl", branch = "async" }
openssl-sys = { git = "https://github.com/zhxie/rust-openssl", branch = "async" }
tokio = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
